--- a/.github/workflows/build-openstackclient-container-image.yml
+++ b/.github/workflows/build-openstackclient-container-image.yml
@@ -27,6 +27,7 @@ jobs:
           - xena
           - yoga
           - zed
+          - antelope
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
