--- a/netbox/requirements.txt
+++ b/netbox/requirements.txt
@@ -1,5 +1,6 @@
 netbox-bgp==0.8.1
 netbox-dns==0.13.1
+netbox-initializers==3.3.2
 netbox-secretstore==1.3.0
 nextbox-ui-plugin==0.9.2
 git+https://github.com/osism/netbox-plugin-osism.git@main
