--- a/ara-server/Containerfile
+++ b/ara-server/Containerfile
@@ -17,7 +17,7 @@ RUN echo $VERSION && apt-get update \
     && mkdir /wheels \
     && python3 -m pip install --no-cache-dir -U 'pip==22.3' \
     && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels -r /requirements.txt \
-    && if [ $VERSION != "latest" ]; then python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels "ara[server]==$VERSION"; else python3 -m pip wheel --wheel-dir=/wheels --no-cache-dir "git+https://github.com/ansible-community/ara"; fi
+    && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels "ara[server]==$VERSION"
 
 FROM python:3.10-slim
 
@@ -38,7 +38,7 @@ RUN apt-get update \
       libmariadb3 \
     && python3 -m pip install --no-cache-dir -U 'pip==22.3' \
     && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels -r /requirements.txt \
-    && if [ $VERSION != "latest" ]; then python3 -m pip install --no-cache-dir --no-index --find-links=/wheels ara[server]; else python3 -m pip install --no-cache-dir --no-index --find-links=/wheels ara; fi \
+    && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels ara[server] \
     && useradd ara-server \
     && chmod +x /wait \
     && rm -rf /var/lib/apt/lists/* /wheels /requirements.txt
