--- a/ara-server/Containerfile
+++ b/ara-server/Containerfile
@@ -1,11 +1,9 @@
 FROM python:3.10-slim as builder
 
-ARG VERSION=latest
-
 COPY files/requirements.txt /requirements.txt
 
 # hadolint ignore=DL3008,DL3013,SC2086
-RUN echo $VERSION && apt-get update \
+RUN apt-get update \
     && apt-get install -y --no-install-recommends \
       build-essential \
       gcc \
@@ -17,11 +15,9 @@ RUN echo $VERSION && apt-get update \
     && mkdir /wheels \
     && python3 -m pip install --no-cache-dir -U 'pip==22.3' \
     && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels -r /requirements.txt \
-    && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels "ara[server]==$VERSION"
+    && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels "ara[server]"
 
 FROM python:3.10-slim
-
-ARG VERSION=latest
 
 ENV TZ=UTC
 
