--- a/.github/workflows/build-ara-server-container-image.yml
+++ b/.github/workflows/build-ara-server-container-image.yml
@@ -47,6 +47,8 @@ jobs:
           scripts/push.sh
         env:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           IMAGE: ara-server
           REPOSITORY: osism/ara-server
         if: |
