openstackclient: remove old versions & add antelope
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-openstackclient-container-image.yml
+++ b/.github/workflows/build-openstackclient-container-image.yml
@@ -23,10 +23,9 @@ jobs:
     strategy:
       matrix:
         version:
-          - wallaby
-          - xena
           - yoga
           - zed
+          - antelope
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
