Update ceph-daemon versions with renovate
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-ceph-daemon-container-image.yml
+++ b/.github/workflows/build-ceph-daemon-container-image.yml
@@ -23,8 +23,8 @@ jobs:
     strategy:
       matrix:
         version:
-          - v6.0.10-stable-6.0-pacific
-          - v7.0.1-stable-7.0-quincy
+          - v6.0.10-stable-6.0-pacific  # renovate: datasource=docker depName=quay.io/ceph/daemon
+          - v7.0.1-stable-7.0-quincy    # renovate: datasource=docker depName=quay.io/ceph/daemon
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
