--- a/metering/Dockerfile
+++ b/metering/Dockerfile
@@ -1,38 +1,1 @@
-ARG IMAGE_VERSION=latest
-FROM python:${IMAGE_VERSION}
-
-ARG USER_ID=45000
-ARG GROUP_ID=45000
-
-ENV DEBIAN_FRONTEND=noninteractive
-
-USER root
-
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-
-RUN apt-get update \
-    && apt-get install --no-install-recommends -y \
-        git \
-    && git clone https://github.com/cloudandheat/odoo_openstack_metering.git \
-    && apt-get remove -y \
-        git \
-    && apt-get clean \
-    && apt-get autoremove -y \
-    && rm -rf \
-      /var/lib/apt/lists/* \
-      /var/tmp/*
-
-COPY ./odoo_openstack_metering /opt/app
-WORKDIR /opt/app
-RUN pip install -r requirements.txt
-
-USER dragon
-VOLUME ["/data"]
-ENTRYPOINT ["python", "metering_api.py", "-v"]
-
-
-LABEL "org.opencontainers.image.documentation"="https://docs.osism.tech" \
-      "org.opencontainers.image.licenses"="ASL 2.0" \
-      "org.opencontainers.image.source"="https://github.com/osism/container-images" \
-      "org.opencontainers.image.url"="https://www.osism.tech" \
-      "org.opencontainers.image.vendor"="OSISM GmbH"
+Containerfile
