Hadolint: Refactor rules
- Delete not needed rules
- Add explanation why we skip some rules
- Refactor code to fix issues
- Partly osism/issues#582

Signed-off-by: Ramona Beermann <ramona.beermann@osism.tech>

--- a/.hadolint.yaml
+++ b/.hadolint.yaml
@@ -1,6 +1,7 @@
 ---
 ignored:
-  - DL3007
-  - DL3008
-  - DL3018
-  - DL3059
+  - DL3007 # we allways use latest where it is possible
+  - DL3008 # we decided not to pin versions
+  - DL3013 # we decided not to pin versions
+  - DL3018 # we decided not to pin versions
+  - DL3059 # Better readability
