ara-server: fix build
Fixes:

Exception: Can not find valid pkg-config name.

Specify MYSQLCLIENT_CFLAGS and MYSQLCLIENT_LDFLAGS env vars manually

Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/ara-server/Containerfile
+++ b/ara-server/Containerfile
@@ -11,6 +11,7 @@ RUN apt-get update \
       libmariadb-dev \
       libssl-dev \
       libyaml-dev \
+      pkg-config \
     && mkdir /wheels \
     && python3 -m pip install --no-cache-dir -U 'pip==23.2' \
     && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels -r /requirements.txt \
