--- a/metering/Containerfile
+++ b/metering/Containerfile
@@ -29,7 +29,7 @@ RUN pip install -r requirements.txt
 
 USER dragon
 VOLUME ["/data"]
-ENTRYPOINT ["python", "metersink", "-v"]
+ENTRYPOINT ["python", "-m", "metersink", "-v"]
 
 LABEL "org.opencontainers.image.documentation"="https://docs.osism.tech" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
