--- a/cephclient/Containerfile
+++ b/cephclient/Containerfile
@@ -1,7 +1,7 @@
 ARG DEBIAN_VERSION=bookworm
 FROM debian:${DEBIAN_VERSION}
 
-ARG VERSION=octopus
+ARG VERSION=reef
 
 ARG USER_ID=45000
 ARG GROUP_ID=45000
