--- a/openstackclient/Containerfile
+++ b/openstackclient/Containerfile
@@ -1,7 +1,7 @@
 ARG PYTHON_VERSION=3.10
 FROM python:${PYTHON_VERSION}-alpine
 
-ARG VERSION=zed
+ARG VERSION=bobcat
 
 ARG USER_ID=45000
 ARG GROUP_ID=45000
