--- a/dnsdist/Containerfile
+++ b/dnsdist/Containerfile
@@ -58,7 +58,7 @@ RUN apk --no-cache add \
       less \
       libedit \
       libsodium \
-      lua \
+      lua-libs \
       net-snmp \
       openssl \
       protobuf \
