--- a/ara-server/Containerfile
+++ b/ara-server/Containerfile
@@ -14,7 +14,7 @@ RUN apt-get update \
       pkg-config \
     && mkdir /wheels \
     && python3 -m pip install --no-cache-dir -U 'pip==23.2.1' \
-    && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels -r /requirements.txt \
+    && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels --pre -r /requirements.txt \
     && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels "ara[server]"
 
 FROM python:3.11-slim
@@ -32,7 +32,7 @@ RUN apt-get update \
       curl \
       libmariadb3 \
     && python3 -m pip install --no-cache-dir -U 'pip==23.2.1' \
-    && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels -r /requirements.txt \
+    && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels --pre -r /requirements.txt \
     && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels "ara[server]" \
     && useradd ara-server \
     && chmod +x /wait \
