openstackclient: add caracal version
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-openstackclient-container-image.yml
+++ b/.github/workflows/build-openstackclient-container-image.yml
@@ -26,6 +26,7 @@ jobs:
           - zed
           - antelope
           - bobcat
+          - caracal
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
