openstackclient: set CLIFF_FIT_WIDTH=1
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/openstackclient/Containerfile
+++ b/openstackclient/Containerfile
@@ -51,6 +51,8 @@ WORKDIR /configuration
 
 VOLUME ["/configuration"]
 
+ENV CLIFF_FIT_WIDTH=1
+
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
 CMD ["openstack"]
 
