--- a/ceph-daemon/Containerfile
+++ b/ceph-daemon/Containerfile
@@ -1,5 +1,5 @@
 ARG VERSION
-FROM quay.io/ceph/daemon:$VERSION-centos-stream8-x86_64
+FROM quay.io/ceph/daemon:$VERSION
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
