ceph-daemon: re-enable pacific build
There was a surprising release of Pacific.

https://ceph.io/en/news/blog/2024/v16-2-15-pacific-released/

Closes osism/issues#897

Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-ceph-daemon-container-image.yml
+++ b/.github/workflows/build-ceph-daemon-container-image.yml
@@ -23,6 +23,7 @@ jobs:
     strategy:
       matrix:
         version:
+          - latest-pacific
           - latest-quincy
     steps:
       - name: Checkout code
