--- a/kosmoo/Containerfile
+++ b/kosmoo/Containerfile
@@ -22,8 +22,8 @@ COPY --from=build /go/src/github.com/daimler/kosmoo/kosmoo /usr/bin/kosmoo
 ENTRYPOINT ["/usr/bin/kosmoo", "-cloud-conf", "/etc/cloud.conf", "-kubeconfig", "/etc/kubeconfig"]
 EXPOSE 9183
 
-LABEL "org.opencontainers.image.documentation"="https://docs.osism.de" \
+LABEL "org.opencontainers.image.documentation"="https://osism.github.io/docs/intro" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
-      "org.opencontainers.image.url"="https://www.osism.de" \
-      "org.opencontainers.image.vendor"="Betacloud Solutions GmbH"
+      "org.opencontainers.image.url"="https://quay.io/organization/osism" \
+      "org.opencontainers.image.vendor"="OSISM GmbH"
