--- a/lloadd/Containerfile
+++ b/lloadd/Containerfile
@@ -33,8 +33,8 @@ COPY --from=builder /usr/local/libexec/lloadd /lloadd
 
 ENTRYPOINT ["/lloadd"]
 
-LABEL "org.opencontainers.image.documentation"="https://osism.github.io" \
+LABEL "org.opencontainers.image.documentation"="https://osism.github.io/docs/intro" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
-      "org.opencontainers.image.url"="https://www.osism.tech" \
+      "org.opencontainers.image.url"="https://quay.io/organization/osism" \
       "org.opencontainers.image.vendor"="OSISM GmbH"
