--- a/nexus/Containerfile
+++ b/nexus/Containerfile
@@ -3,8 +3,8 @@ FROM sonatype/nexus3:${VERSION}
 
 COPY files/scripts /scripts
 
-LABEL "org.opencontainers.image.documentation"="https://docs.osism.tech" \
+LABEL "org.opencontainers.image.documentation"="https://osism.github.io/docs/intro" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
-      "org.opencontainers.image.url"="https://www.osism.tech" \
+      "org.opencontainers.image.url"="https://quay.io/organization/osism" \
       "org.opencontainers.image.vendor"="OSISM GmbH"
