--- a/seed/Containerfile
+++ b/seed/Containerfile
@@ -25,8 +25,8 @@ WORKDIR /opt/configuration/environments/manager
 VOLUME ["/opt/configuration"]
 ENTRYPOINT ["/run.sh"]
 
-LABEL "org.opencontainers.image.documentation"="https://docs.osism.tech" \
+LABEL "org.opencontainers.image.documentation"="https://osism.github.io/docs/intro" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
-      "org.opencontainers.image.url"="https://www.osism.tech" \
+      "org.opencontainers.image.url"="https://quay.io/organization/osism" \
       "org.opencontainers.image.vendor"="OSISM GmbH"
