ceph-daemon: add reef release
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-ceph-daemon-container-image.yml
+++ b/.github/workflows/build-ceph-daemon-container-image.yml
@@ -25,6 +25,7 @@ jobs:
         version:
           - latest-pacific
           - latest-quincy
+          - latest-reef
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
