--- a/homer/Containerfile
+++ b/homer/Containerfile
@@ -1,6 +1,6 @@
 # build stage
 FROM node:lts-alpine as build-stage
-ARG VERSION=v23.10.1  # renovate: datasource=docker depName=b4bz/homer
+ARG VERSION=v24.02.1  # renovate: datasource=github-releases depName=bastienwirtz/homer
 
 WORKDIR /app
 
