--- a/dnsdist/Containerfile
+++ b/dnsdist/Containerfile
@@ -78,7 +78,7 @@ RUN /usr/local/bin/dnsdist --version
 ENTRYPOINT ["/usr/local/bin/dnsdist"]
 CMD ["--help"]
 
-LABEL "org.opencontainers.image.documentation"="https://osism.github.io/docs/intro" \
+LABEL "org.opencontainers.image.documentation"="https://osism.tech/docs/" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
       "org.opencontainers.image.url"="https://quay.io/organization/osism" \
