--- a/kosmoo/Containerfile
+++ b/kosmoo/Containerfile
@@ -22,7 +22,7 @@ COPY --from=build /go/src/github.com/daimler/kosmoo/kosmoo /usr/bin/kosmoo
 ENTRYPOINT ["/usr/bin/kosmoo", "-cloud-conf", "/etc/cloud.conf", "-kubeconfig", "/etc/kubeconfig"]
 EXPOSE 9183
 
-LABEL "org.opencontainers.image.documentation"="https://osism.github.io/docs/intro" \
+LABEL "org.opencontainers.image.documentation"="https://osism.tech/docs/" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
       "org.opencontainers.image.url"="https://quay.io/organization/osism" \
