--- a/lloadd/Containerfile
+++ b/lloadd/Containerfile
@@ -33,7 +33,7 @@ COPY --from=builder /usr/local/libexec/lloadd /lloadd
 
 ENTRYPOINT ["/lloadd"]
 
-LABEL "org.opencontainers.image.documentation"="https://osism.github.io/docs/intro" \
+LABEL "org.opencontainers.image.documentation"="https://osism.tech/docs/" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
       "org.opencontainers.image.url"="https://quay.io/organization/osism" \
