--- a/metering/Containerfile
+++ b/metering/Containerfile
@@ -32,7 +32,7 @@ VOLUME ["/data"]
 VOLUME ["/configuration"]
 ENTRYPOINT ["python", "-m", "metersink", "-c", "/configuration/settings.conf", "-v"]
 
-LABEL "org.opencontainers.image.documentation"="https://osism.github.io/docs/intro" \
+LABEL "org.opencontainers.image.documentation"="https://osism.tech/docs/" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
       "org.opencontainers.image.url"="https://quay.io/organization/osism" \
