--- a/nexus/Containerfile
+++ b/nexus/Containerfile
@@ -3,7 +3,7 @@ FROM sonatype/nexus3:${VERSION}
 
 COPY files/scripts /scripts
 
-LABEL "org.opencontainers.image.documentation"="https://osism.github.io/docs/intro" \
+LABEL "org.opencontainers.image.documentation"="https://osism.tech/docs/" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
       "org.opencontainers.image.url"="https://quay.io/organization/osism" \
