--- a/openstackclient/Containerfile
+++ b/openstackclient/Containerfile
@@ -54,7 +54,7 @@ VOLUME ["/configuration"]
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
 CMD ["openstack"]
 
-LABEL "org.opencontainers.image.documentation"="https://osism.github.io/docs/intro" \
+LABEL "org.opencontainers.image.documentation"="https://osism.tech/docs/" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
       "org.opencontainers.image.url"="https://quay.io/organization/osism" \
