--- a/prometheus-redfish-exporter/Containerfile
+++ b/prometheus-redfish-exporter/Containerfile
@@ -20,7 +20,7 @@ RUN apk add --no-cache \
 
 ENTRYPOINT ["usr/bin/dumb-init", "--", "/redfish_exporter", "--config.file=/config.yaml"]
 
-LABEL "org.opencontainers.image.documentation"="https://osism.github.io/docs/intro" \
+LABEL "org.opencontainers.image.documentation"="https://osism.tech/docs/" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
       "org.opencontainers.image.url"="https://quay.io/organization/osism" \
