openstackclient: add dalmatian (master) build
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-openstackclient-container-image.yml
+++ b/.github/workflows/build-openstackclient-container-image.yml
@@ -26,6 +26,7 @@ jobs:
           - antelope
           - bobcat
           - caracal
+          - dalmatian
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
