--- a/openstackclient/Containerfile
+++ b/openstackclient/Containerfile
@@ -20,6 +20,7 @@ RUN apk update --no-cache \
       openssl-dev \
       python3-dev \
       rust \
+    && if [ $VERSION = "dalmatian" ]; then wget -q -P / -O requirements.tar.gz https://tarballs.opendev.org/openstack/requirements/requirements-master.tar.gz; fi \
     && if [ $VERSION = "caracal" ]; then wget -q -P / -O requirements.tar.gz https://tarballs.opendev.org/openstack/requirements/requirements-stable-2024.1.tar.gz; fi \
     && if [ $VERSION = "bobcat" ]; then wget -q -P / -O requirements.tar.gz https://tarballs.opendev.org/openstack/requirements/requirements-stable-2023.2.tar.gz; fi \
     && if [ $VERSION = "antelope" ]; then wget -q -P / -O requirements.tar.gz https://tarballs.opendev.org/openstack/requirements/requirements-stable-2023.1.tar.gz; fi \
