--- a/netbox/Containerfile
+++ b/netbox/Containerfile
@@ -4,15 +4,9 @@ FROM quay.io/netboxcommunity/netbox:${VERSION}
 COPY requirements.txt /requirements.txt
 COPY files/launch.sh /opt/netbox/launch.sh
 
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-      git \
-    && /opt/netbox/venv/bin/pip3 install --no-cache-dir -r /requirements.txt \
-    && chmod +x /opt/netbox/launch.sh \
-    && apt-get remove -y \
-      git \
-    && apt-get autoremove -y \
-    && rm -rf /var/lib/apt/lists/*
+RUN /opt/netbox/venv/bin/python3 -m pip --no-cache-dir install -U 'pip==24.1' \
+    && /opt/netbox/venv/bin/python3 -m pip --no-cache-dir install -r /requirements.txt \
+    && chmod +x /opt/netbox/launch.sh
 
 CMD [ "/opt/netbox/docker-entrypoint.sh", "/opt/netbox/launch.sh" ]
 
