--- a/homer/Containerfile
+++ b/homer/Containerfile
@@ -16,11 +16,11 @@ RUN yarn install --frozen-lockfile \
 # production stage
 FROM alpine:3.20
 
-ENV USER darkhttpd
-ENV GROUP darkhttpd
-ENV GID 911
-ENV UID 911
-ENV PORT 8080
+ENV USER=darkhttpd
+ENV GROUP=darkhttpd
+ENV GID=911
+ENV UID=911
+ENV PORT=8080
 
 RUN addgroup -S ${GROUP} -g ${GID} && adduser -D -S -u ${UID} ${USER} ${GROUP} && \
     apk add -U --no-cache su-exec darkhttpd
