--- a/tempest/Containerfile
+++ b/tempest/Containerfile
@@ -1,11 +1,11 @@
-FROM python:3.12-slim-bookworm as pre-gobuild
+FROM python:3.12-slim-bookworm AS pre-gobuild
 
 RUN apt-get update
 RUN apt-get install --no-install-recommends -y build-essential
 RUN python3 -m pip install --no-cache-dir --upgrade 'pip==24.1.2'
 RUN pip3 install --no-cache-dir octavia-tempest-plugin
 
-FROM golang:bookworm as gobuild
+FROM golang:bookworm AS gobuild
 
 COPY --link --from=pre-gobuild /usr/local/lib/python*/site-packages/octavia_tempest_plugin/contrib/test_server/test_server.go $GOPATH/test_server.go
 
