--- a/openstackclient/files/requirements.txt
+++ b/openstackclient/files/requirements.txt
@@ -16,6 +16,7 @@ python-ironicclient
 python-keystoneclient
 python-magnumclient
 python-manilaclient
+python-masakariclient
 python-mistralclient
 python-neutronclient
 python-novaclient
