--- a/ansible-lint/Containerfile
+++ b/ansible-lint/Containerfile
@@ -21,6 +21,7 @@ RUN apt-get update \
     && python3 -m pip install --no-cache-dir -U 'pip==24.2' \
     && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels --pre -r /requirements.txt \
     && ansible-galaxy collection install -r /requirements.yml \
+    && ansible-galaxy role install -r /requirements.yml \
     && apt-get remove -y \
       git \
     && apt-get autoremove -y \
