openstackclient: add epoxy
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-openstackclient-container-image.yml
+++ b/.github/workflows/build-openstackclient-container-image.yml
@@ -27,6 +27,7 @@ jobs:
           - bobcat
           - caracal
           - dalmatian
+          - epoxy
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
