ansible-lint: install containers.podman collection
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/ansible-lint/files/requirements.yml
+++ b/ansible-lint/files/requirements.yml
@@ -11,6 +11,7 @@ collections:
   - name: ansible.posix
   - name: community.docker
   - name: community.general
+  - name: containers.podman
   - name: debops.debops
   - name: kubernetes.core
   - name: netbox.netbox
