tempest: use pyclean
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/tempest/Containerfile
+++ b/tempest/Containerfile
@@ -57,6 +57,10 @@ rm -rf \
   /var/lib/apt/lists/* \
   /var/tmp/* \
   /requirements.txt
+
+pip3 install --no-cache-dir pyclean==3.0.0
+pyclean /usr
+pip3 uninstall -y pyclean
 EOF
 
 USER dragon
