--- a/netbox/requirements.txt
+++ b/netbox/requirements.txt
@@ -2,6 +2,7 @@
 netmiko==4.4.0
 PyYAML==6.0.2
 Jinja2==3.1.4
+
 # Netbox plugins
 netbox-bgp==0.14.0
 netbox-config-diff==2.7.0
@@ -9,4 +10,4 @@ netbox-data-flows==1.0.6
 netbox-initializers==4.1.0
 netbox-secrets==2.1.0
 netbox-topology-views==4.1.0
-nextbox-ui-plugin==1.0.3
+netbox-ui-plugin==1.0.3
