netbox: also collect static files at build time
Related to 9b0b41db36e7bd5dea96cc4556ed39d4eabe3e33

Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/netbox/Containerfile
+++ b/netbox/Containerfile
@@ -6,7 +6,8 @@ COPY files/launch.sh /opt/netbox/launch.sh
 
 RUN /opt/netbox/venv/bin/python3 -m pip --no-cache-dir install -U 'pip==24.3.1' \
     && /opt/netbox/venv/bin/python3 -m pip --no-cache-dir install -r /requirements.txt \
-    && chmod +x /opt/netbox/launch.sh
+    && chmod +x /opt/netbox/launch.sh \
+    && python3 /opt/netbox/netbox/manage.py collectstatic --no-input
 
 CMD [ "/opt/netbox/docker-entrypoint.sh", "/opt/netbox/launch.sh" ]
 
