--- a/netbox/Containerfile
+++ b/netbox/Containerfile
@@ -6,7 +6,8 @@ COPY files/launch.sh /opt/netbox/launch.sh
 
 RUN /opt/netbox/venv/bin/python3 -m pip --no-cache-dir install -U 'pip==24.3.1' \
     && /opt/netbox/venv/bin/python3 -m pip --no-cache-dir install -r /requirements.txt \
-    && chmod +x /opt/netbox/launch.sh
+    && chmod +x /opt/netbox/launch.sh \
+    && chown -R unit: /opt/netbox/netbox/static
 
 CMD [ "/opt/netbox/docker-entrypoint.sh", "/opt/netbox/launch.sh" ]
 
