cephclient: build squid image
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-cephclient-container-image.yml
+++ b/.github/workflows/build-cephclient-container-image.yml
@@ -25,6 +25,7 @@ jobs:
         version:
           - quincy
           - reef
+          - squid
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
