--- a/.github/workflows/build-homer-container-image.yml
+++ b/.github/workflows/build-homer-container-image.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         version:
-          - v24.10.1  # renovate: datasource=docker depName=b4bz/homer
+          - v24.12.1  # renovate: datasource=github-releases depName=bastienwirtz/homer
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
