--- a/openstackclient/Containerfile
+++ b/openstackclient/Containerfile
@@ -7,6 +7,7 @@ ARG USER_ID=45000
 ARG GROUP_ID=45000
 
 COPY files/requirements.txt /requirements.txt
+COPY files/requirements.extra.txt /requirements.extra.txt
 
 # This solves the following problem. It can be removed in the future if
 # netifaces is no longer used as a dependency of the OpenStack SDK.
@@ -44,10 +45,15 @@ RUN apk update --no-cache \
       -r /packages.txt \
       -c /requirements/upper-constraints.txt \
       --system \
+    && uv pip install \
+      -r /requirements.extra.txt \
+      -c /requirements/upper-constraints.txt \
+      --system \
     && rm -rf \
       /packages.txt \
       /requirements \
       /requirements.txt \
+      /requirements.extra.txt \
     && apk del .build-deps \
     && openstack complete > /osc.bash_completion \
     && addgroup -g $GROUP_ID dragon \
